WebApp is completed

--- a/templates/doctor/doctor_index.html
+++ b/templates/doctor/doctor_index.html
@@ -292,29 +292,14 @@
                     </a>
                 </li>
 
-<!--  ==================== COMPLAINTS ===================  -->
-{##}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" href="/view_pending_complaint">#}
-{#                        <i class="icon-paper menu-icon"></i>#}
-{#                        <span class="menu-title">COMPLAINT</span>#}
-{#                    </a>#}
-{#                </li>#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link" data-toggle="collapse" href="#complaint" aria-expanded="false"#}
-{#                       aria-controls="complaint">#}
-{#                        <i class="icon-columns menu-icon"></i>#}
-{#                        <span class="menu-title">Complaint</span>#}
-{#                        <i class="menu-arrow"></i>#}
-{#                    </a>#}
-{#                    <div class="collapse" id="complaint">#}
-{#                        <ul class="nav flex-column sub-menu">#}
-{#                            <li class="nav-item"><a class="nav-link" href="/view_pending_complaint">Pending</a></li>#}
-{#                            <li class="nav-item"><a class="nav-link" href="/view_all_complaint">All</a></li>#}
-{#                            <li class="nav-item"><a class="nav-link" href="/view_replied_complaint">Replied</a></li>#}
-{#                        </ul>#}
-{#                    </div>#}
-{#                </li>#}
+<!--  ==================== CHAT ===================  -->
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/doctor_text_chat">
+                        <i class="fa-solid fa-message menu-icon"></i>
+                        <span class="menu-title">Chat</span>
+                    </a>
+                </li>
 
 <!--  ==================== CHANGE PASSWORD ===================  -->
 
