--- a/templates/admin/reply.html
+++ b/templates/admin/reply.html
@@ -17,7 +17,7 @@
                             <tr>
 
                                 <td>
-                                    <input type="submit" name="button" id="button" value="Submit"
+                                    <input type="submit" name="button" id="button" value="Send"
                                            class="btn btn-block btn-lg btn-primary"/>
                                 </td>
                             </tr>
