--- a/templates/login_index.html
+++ b/templates/login_index.html
@@ -42,22 +42,22 @@
 {#                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="/admin_index">SIGN IN</a>#}
                     <input type="submit" value="Sign IN" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">
                 </div>
-                <div class="my-2 d-flex justify-content-between align-items-center">
-                  <div class="form-check">
-                    <label class="form-check-label text-muted">
-                      <input type="checkbox" class="form-check-input">
-                      Keep me signed in
-                    </label>
-                  </div>
-                  <a href="#" class="auth-link text-black">Forgot password?</a>
-                </div>
+{#                <div class="my-2 d-flex justify-content-between align-items-center">#}
+{#                  <div class="form-check">#}
+{#                    <label class="form-check-label text-muted">#}
+{#                      <input type="checkbox" class="form-check-input">#}
+{#                      Keep me signed in#}
+{#                    </label>#}
+{#                  </div>#}
+{#                  <a href="#" class="auth-link text-black">Forgot password?</a>#}
+{#                </div>#}
 {#                <div class="mb-2">#}
 {#                  <button type="button" class="btn btn-block btn-facebook auth-form-btn">#}
 {#                    <i class="ti-facebook mr-2"></i>Connect using facebook#}
 {#                  </button>#}
 {#                </div>#}
                 <div class="text-center mt-4 font-weight-light">
-                  Don't have an account? <a class="open-button" onclick="openForm()">Create</a>
+                  Don't have an account? <a class="open-button" href="/register_page">Create</a>
                 </div>
 
                   <div class="form-popup" id="myform">
