--- a/templates/pharmacy/add_medicine.html
+++ b/templates/pharmacy/add_medicine.html
@@ -17,7 +17,7 @@
                     <div class="form-group row">
                         <label for="" class="col-sm-3">Image</label>
                         <div class="col-sm-9">
-                            <input type="image" src="img_submit.gif" alt="Submit" width="48" height="48">
+                            <input type="file" name="img" id="img" class="form-control file-upload-info">
                         </div>
                     </div>
                     <div class="form-group row">
