--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>LOGIN - Admin</title>
+    <!-- plugins:css -->
+    <link rel="stylesheet" href="/static/asset/vendors/feather/feather.css">
+    <link rel="stylesheet" href="/static/asset/vendors/ti-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="/static/asset/vendors/css/vendor.bundle.base.css">
+    <!-- endinject -->
+    <!-- Plugin css for this page -->
+    <!-- End plugin css for this page -->
+    <!-- inject:css -->
+    <link rel="stylesheet" href="/static/asset/css/vertical-layout-light/style.css">
+    <!-- endinject -->
+    <link rel="shortcut icon" href="/static/asset/images/favicon.png"/>
+
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 </head>
+
 <body>
-<h1>Hello</h1>
+<div class="container-scroller">
+    <div class="container-fluid page-body-wrapper full-page-wrapper">
+        <div class="content-wrapper d-flex d-inline-flex align-items-center auth px-0">
+            <div class="row w-100 mx-0">
+                <div class="mx-auto">
+                    <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+                        <div class="align-items-center">
+                            <p>
+                                <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_olluraqu.json"
+                                               background="transparent" speed="1" style="width: 300px; height: 300px;"
+                                               loop autoplay></lottie-player>
+                            </p>
+                            <h4>SignUp as <a href="/hospital_signup">Hospital</a></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-wrapper d-flex d-inline-flex align-items-center auth px-0">
+            <div class="row w-100 mx-0">
+                <div class="mx-auto">
+                    <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+                        <div class="align-items-center">
+                            <p>
+                                <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_jcsfwbvi.json"
+                                               background="transparent" speed="1" style="width: 300px; height: 300px;"
+                                               loop autoplay></lottie-player>
+                            </p>
+                            <h4>SignUp as <a href="/pharmacy_signup">Pharmacy</a></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+    <!-- page-body-wrapper ends -->
+</div>
+<!-- container-scroller -->
+<!-- plugins:js -->
+<script src="/static/asset/vendors/js/vendor.bundle.base.js"></script>
+<!-- endinject -->
+<!-- Plugin js for this page -->
+<!-- End plugin js for this page -->
+<!-- inject:js -->
+<script src="/static/asset/js/off-canvas.js"></script>
+<script src="/static/asset/js/hoverable-collapse.js"></script>
+<script src="/static/asset/js/template.js"></script>
+<script src="/static/asset/js/settings.js"></script>
+<script src="/static/asset/js/todolist.js"></script>
+<!-- endinject -->
 </body>
+
 </html>
